<resources>
    <string name="app_name">Погода</string>
    <string name="weather_forecast">Прогноз погоды</string>
    <string name="loading">Загрузка…</string>
    <string name="error_loading">Ошибка загрузки данных</string>
    <string name="retry">Повторить</string>
    <string name="temperature">%1$s°C</string>
    <string name="feels_like">Ощущается как %1$s°C</string>
    <string name="humidity">Влажность: %1$s%%</string>
    <string name="wind_speed">Ветер: %1$s м/с</string>
    <string name="pressure">Давление: %1$s гПа</string>
    <string name="precipitation">Осадки: %1$s мм</string>
    <string name="cloudiness">Облачность: %1$s%%</string>
    <string name="weather_detail">Детали погоды</string>
    <string name="city_moscow">Москва, Россия</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="description_sunny">Солнечно</string>
    <string name="description_cloudy">Облачно</string>
    <string name="description_rainy">Дождь</string>
    <string name="description_snowy">Снег</string>
    <string name="description_clear">Ясно</string>
    <string name="description_partly_cloudy">Переменная облачность</string>
    <string name="description_light_rain">Небольшой дождь</string>
    <string name="description_moderate_rain">Умеренный дождь</string>
    <string name="description_heavy_rain">Сильный дождь</string>
    <string name="description_light_snow">Небольшой снег</string>
    <string name="description_moderate_snow">Умеренный снег</string>
    <string name="description_heavy_snow">Сильный снег</string>
    <string name="calculator">Калькулятор</string>
    <string name="clear">Очистить</string>
    <string name="delete">Удалить</string>
    <string name="main_menu">Главное меню</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="go_to_register">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="go_to_login">Уже есть аккаунт? Войдите</string>
    <string name="list">Список</string>
</resources>
