<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.weather.auth.presentation.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_weatherFragment"
            app:destination="@id/weatherFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.weather.auth.presentation.ui.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_registerFragment_to_weatherFragment"
            app:destination="@id/weatherFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.weather.weather.presentation.ui.WeatherFragment"
        android:label="@string/weather_forecast"
        tools:layout="@layout/fragment_weather">
        <action
            android:id="@+id/action_weatherFragment_to_weatherDetailFragment"
            app:destination="@id/weatherDetailFragment">
            <argument
                android:name="weatherDay"
                app:argType="com.example.weather.weather.domain.model.WeatherDay" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/weatherDetailFragment"
        android:name="com.example.weather.weather.presentation.ui.WeatherDetailFragment"
        android:label="@string/weather_detail"
        tools:layout="@layout/fragment_weather_detail">
        <argument
            android:name="weatherDay"
            app:argType="com.example.weather.weather.domain.model.WeatherDay" />
    </fragment>

    <fragment
        android:id="@+id/calculatorFragment"
        android:name="com.example.weather.calculator.presentation.ui.CalculatorFragment"
        android:label="@string/calculator"
        tools:layout="@layout/fragment_calculator" />

    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.weather.list.presentation.ui.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />

</navigation>

